# Qt-PulseOximeter

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  qmldir
assets/text_files/: test.html  test.txt
qml/: main.qml
qml/components/: AddButton.qml  AddDialog.qml  AddOrEditDialog.qml  ConfirmDeleteDialog.qml  DataList.qml  EditDialog.qml  ElectronicDevice.qml  ErrorDialog.qml  FontConfig.qml  ImageIcons.qml  InfoCard.qml  LineSeparator.qml  MyButton.qml  MyLabeledRadioButtons.qml  MyListView.qml  MyNumberPad.qml  MyTextField.qml  TabButtonFooter.qml  knowledgeButton.qml
qml/sampleData/: ElectronicDevice.qml  UserData.qml
qml/screens/: AdditionaDataScreen.qml  AdditionalEventsScreen.qml  BloodPressureScreen.qml  ChartsScreen.qml  DataScreen.qml  EverydayWellBeingScreen.qml  ExercisesScreen.qml  HomeScreen.qml  KnowledgeDetailScreen.qml  KnowledgeScreen.qml  LoginScreen.qml  LogoutScreen.qml  MealsScreen.qml  NavigationBar.qml  OutputDataScreen.qml  PulseOximeterDetailScreen.qml  PulseOximeterScreen.qml  SettingsScreen.qml  TESTScreen.qml  UserFormScreen.qml
qml/styles/: MyStyles.qml
src/: main.cpp  main.h
src/controllers/: additionaleventscontroller.cpp  additionaleventscontroller.h  exercisescontroller.cpp  exercisescontroller.h  mealscontroller.cpp  mealscontroller.h  measurementscontroller.cpp  measurementscontroller.h  settingscontroller.cpp  settingscontroller.h  wellbeingcontroller.cpp  wellbeingcontroller.h
src/models/: additionaleventslistmodel.cpp  additionaleventslistmodel.h  additionaleventsmodel.cpp  additionaleventsmodel.h  basecrudmodel.cpp  basecrudmodel.h  exerciseslistmodel.cpp  exerciseslistmodel.h  exercisesmodel.cpp  exercisesmodel.h  mealslistmodel.cpp  mealslistmodel.h  mealsmodel.cpp  mealsmodel.h  measurementsmodel.cpp  measurementsmodel.h  settingsmodel.cpp  settingsmodel.h  wellbeinglistmodel.cpp  wellbeinglistmodel.h  wellbeingmodel.cpp  wellbeingmodel.h
